2018-11-27  Florian Weimer  <fweimer@redhat.com>

	* support/support.h (support_quote_string): Declare.
	* support/support_quote_string.c: New file.
	* support/tst-support_quote_string.c: Likewise.
	* support/Makefile (libsupport-routines): Add
	support_quote_string.
	(tests): Add tst-support_quote_string.

2018-11-27  Florian Weimer  <fweimer@redhat.com>

	[BZ #23927]
	CVE-2018-19591
	* sysdeps/unix/sysv/linux/if_index.c (__if_nametoindex): Avoid
	descriptor leak in case of ENODEV error.

2018-11-27  Rafael Ávila de Espíndola  <rafael@espindo.la>

	[BZ #19767]
	* sysdeps/unix/sysv/linux/aarch64/init-first.c: Remove #ifdef SHARED.
	* sysdeps/unix/sysv/linux/aarch64/libc-vdso.h: Remove #ifdef SHARED.
	* sysdeps/unix/sysv/linux/aarch64/sysdep.h: Define ALWAYS_USE_VSYSCALL.

2018-11-26  Carlos O'Donell  <carlos@redhat.com>

	* scripts/abilist.awk: Handle .tdata. Error for unknown combinations.
	Error for unknown lines.

2018-11-26  Joseph Myers  <joseph@codesourcery.com>

	* scripts/build-many-glibcs.py (Context.fix_glibc_timestamps):
	Touch additional files.

2018-11-26  Florian Weimer  <fweimer@redhat.com>

	[BZ #23907]
	* malloc/malloc.c (_int_free): Validate tc_idx before checking for
	double-frees.

2018-11-26  Rafael Ávila de Espíndola  <rafael@espindo.la>

	[BZ #19767]
	* sysdeps/unix/sysv/linux/powerpc/init-first.c: Remove #ifdef SHARED.
	* sysdeps/unix/sysv/linux/powerpc/libc-vdso.h: Remove #ifdef
	SHARED.  Include sysdep.h.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/sysdep.h: Define
	ALWAYS_USE_VSYSCALL.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/sysdep.h: Define
	ALWAYS_USE_VSYSCALL.

2018-11-23  Rafael Ávila de Espíndola  <rafael@espindo.la>

	[BZ #19767]
	* nptl/Makefile (tests-static): Add tst-cond11-static.
	(tests): Likewise.
	* nptl/tst-cond11-static.c: New File.
	* sysdeps/unix/sysv/linux/Makefile (tests-static): Add
	tst-affinity-static.
	(tests): Likewise.
	* sysdeps/unix/sysv/linux/sysdep-vdso.h: Check USE_VSYSCALL
	instead of SHARED.