@@ -1,3 +1,8 @@
+2018-11-27  Joseph Myers  <joseph@codesourcery.com>
+
+	* sysdeps/mach/hurd/Makefile ($(common-objpfx)stamp-errnos): Use
+	$(hurd-objpfx)bits/errno.h-tmp, not $(hurd)/bits/errno.h-tmp.
+
 2018-11-27  Florian Weimer  <fweimer@redhat.com>
 
 	* support/support.h (support_quote_string): Declare.
